--- a/Project.Rmd
+++ b/Project.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "DataSci 306 Final Project"
-author: "DataSci 306 Instructional Team"
+author: "Minnie Yuan, Zixuan Wang, Yongyi Yang"
 date: "`r Sys.Date()`"
 output: html_document
 ---
