--- a/data/IMDb.Rmd
+++ b/data/IMDb.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "IMDB Non-Commercial Data"
-author: "DataSci 306 Instructional Team"
+author: "Minnie Yuan, Zixuan Wang, Yongyi Yang"
 date: "`r Sys.Date()`"
 output: html_document
 ---
