--- a/Project.Rmd
+++ b/Project.Rmd
@@ -37,8 +37,16 @@ In title_pinciple, ordering is referring to order of cast, title ratings includ 
 
   * For any character columns, decided if they are actually representing factors/categorical data with a moderate number of columns. If so report the distributions for these variables.
   
+title_principals and names_basics are categoircal data, but title_principals, names_basics, and All tables are not. 
+#distribution of title_principles: 
+Actor and Actress: These two categories are the most frequent, indicating that most principal cast members are performers. Director and Producer: These are also common, but less frequent than actors/actresses. Other categories such as writer, composer, and cinematographer are less frequent. 
+#distribution of names_basic: 
+Actor is the most common profession, followed by producer, director, and writer.
+Other frequent professions include composer, cinematographer, and editor.
+The distribution shows that the entertainment industry is dominated by these key roles, with a long tail of less common professions.
 
-  * Provide a plot for each table. Across all of the plots, try to show off the most possible different ggplot features (`geoms_` functions, `stat_` functions, coordinate systems, facets, use of several variables, annotations)
+* Provide a plot for each table. Across all of the plots, try to show off the most possible different ggplot features (`geoms_` functions, `stat_` functions, coordinate systems, facets, use of several variables, annotations)
+
 * For the `titles_basics` table
   * use two different variables to group and explore how `runtimeMinutes` varies for these different groups. Produce appropriate summaries.
   * How many titles are known for name that is different than the original release name?
