--- a/Project.Rmd
+++ b/Project.Rmd
@@ -48,7 +48,10 @@ The distribution shows that the entertainment industry is dominated by these key
 * Provide a plot for each table. Across all of the plots, try to show off the most possible different ggplot features (`geoms_` functions, `stat_` functions, coordinate systems, facets, use of several variables, annotations)
 * For the `titles_basics` table
   * use two different variables to group and explore how `runtimeMinutes` varies for these different groups. Produce appropriate summaries. 
+  For most genres, the runtime drops as runtime increases. This pattern is consistent across all genres, including Action, Comedy, Drama, Documentary, Animation, and others.
+For animation and short, these genres show the highest density at the shortest runtimes, which aligns with expectations since animated and short films are typically brief.
   * How many titles are known for name that is different than the original release name?
+  There are 6458 titles with different names
   * Graph the conditional distributions of release year based on the previous results. Comment on any trends you observe.
 * For the ratings, use the `cut` function to break the data into three groups based on the average ratings. Are higher rated titles rated more often or less often than lower rated titles? 
 * For the names table, 
@@ -98,7 +101,6 @@ Using results from the previous section, create a shiny application that allows 
 In the principals table, there is a `category` column. Use this column as a primary filter to allow users to then select specific job categories. After select the specific job categories, display information from another table.
 
 ## Extra Credit: 6 Degrees of Kevin Bacon
-
 Create an app to allow users to play [Six Degrees of Kevin Bacon](https://en.wikipedia.org/wiki/Six_Degrees_of_Kevin_Bacon#:~:text=Six%20Degrees%20of%20Kevin%20Bacon%20or%20Bacon's%20Law%20is%20a,ultimately%20leads%20to%20prolific%20American).
 
 Create a Shiny application where a person can type the primary title of movie or TV show. Then have app show all the people who had a role in the show. Let the user select a person in that cast and show all other people who have been in a title with that person. Repeat up to 6 times. If "Kevin Bacon" (`nconst == 'nm0000102'`) ever appears in the list, let the player know they have won! If they click more than 6 times, let them know they have lost.
