--- a/data/IMDb.Rmd
+++ b/data/IMDb.Rmd
@@ -26,7 +26,6 @@ names_basics <- read_csv('name_basics_sample.csv.gz')
 ```
 
 ## Columns
-
 Please refer to the [IMDb documentation on columns names and their meanings](https://developer.imdb.com/non-commercial-datasets/). Take special note of columns that are used as primary and secondary keys.
 
 ```{r}
@@ -45,38 +44,25 @@ sort(table(names_basics$primaryProfession), decreasing = TRUE)[1:10]
 #part 2-3
 Graph of title_basics
 ```{r}
-# Clean and prep data
-title_basics_clean <- title_basics %>%
-  filter(!is.na(runtimeMinutes), runtimeMinutes < 300, !is.na(genres)) %>%
-  separate_rows(genres, sep = ",")
-
-# Plot with multiple geoms and facets
-ggplot(title_basics_clean, aes(x = as.numeric(runtimeMinutes))) +
-  geom_histogram(aes(y = after_stat(density)), bins = 30, fill = "skyblue", alpha = 0.7) +
-  geom_density(color = "red", linewidth = 1) +
-  facet_wrap(~ genres, ncol = 3) +
-  labs(title = "Runtime Distribution by Genre",
-       x = "Runtime (minutes)",
-       y = "Density") +
-  theme_minimal() +
-  theme(strip.text = element_text(face = "bold"))
+summary(title_basics)
+title_basics %>%
+  filter(!is.na(runtimeMinutes)) %>%
+  ggplot(aes(x = titleType, y = runtimeMinutes, fill = factor(isAdult))) +
+  geom_boxplot() +
+  coord_flip() +
+  labs(title = "Runtime Distribution by Title Type and Adult Content", x = "Title Type", y = "Runtime (minutes)", fill = "Is Adult")
 ```
 
 Graph of title_principles
 ```{r}
-# Prepare role percentages
-role_data <- title_principals %>%
-  count(category) %>%
-  mutate(percent = n/sum(n)*100)
-# Bar plot converted to polar
-ggplot(role_data, aes(x = "", y = percent, fill = category)) +
-  geom_bar(stat = "identity", width = 1) +
-  coord_polar(theta = "y") +
-  geom_text(aes(label = paste0(round(percent), "%")), 
-            position = position_stack(vjust = 0.5)) +
-  scale_fill_viridis_d() +
-  labs(title = "Role Category Distribution") +
-  theme_void()
+summary(title_principals)
+title_principals %>%
+  count(category, sort = TRUE) %>%
+  mutate(category = fct_reorder(category, n)) %>%
+  ggplot(aes(x = category, y = n)) +
+  geom_bar(stat = "identity", fill = "orange") +
+  coord_flip() +
+  labs(title = "Categories Distributions in Title Principals", x = "Category", y = "Count")
 ```
 
 #part2-3
@@ -170,24 +156,14 @@ ggplot(title_basics, aes(x = startYear, fill = isAdult)) +
 
 #part2-5
 ```{r}
+summary(title_ratings)
+# Break average ratings into three groups
 title_ratings <- title_ratings %>%
-  mutate(
-    rating_group = cut(
-      averageRating,
-      breaks = c(0, 5, 7, 10),
-      labels = c("Low", "Medium", "High"),
-      include.lowest = TRUE
-    )
-  ) %>%
-  filter(!is.na(rating_group))  # Remove NA values
+  mutate(ratingGroup = cut(averageRating, breaks = 3, labels = c("Low", "Medium", "High")))
 
-rating_summary <- title_ratings %>%
-  group_by(rating_group) %>%
-  summarize(
-    mean_votes = mean(numVotes, na.rm = TRUE),
-    count = n()
-  )
-print(rating_summary)
+ggplot(title_ratings, aes(x = ratingGroup, y = numVotes)) +
+  geom_violin(fill = "purple") +
+  labs(title = "Number of Votes by Rating Groups", x = "Rating Group", y = "Number of Votes")
 ```
 Higher rated titles rated more often than lower rated titles
 
