--- a/data/IMDb.Rmd
+++ b/data/IMDb.Rmd
@@ -46,24 +46,14 @@ sort(table(names_basics$primaryProfession), decreasing = TRUE)[1:10]
 Graph of Names_basics 
 ```{r}
 summary(names_basics)
-# Distribution of number of known titles
 names_basics %>%
   mutate(knownForCount = lengths(strsplit(knownForTitles, ","))) %>%
   ggplot(aes(knownForCount)) +
-  geom_histogram(binwidth = 1, fill = "skyblue") +
+  geom_histogram(binwidth = 1, fill = "yellow") +
   labs(title = "Distribution of Known Titles per Person", x = "Number of Titles", y = "Count")
 ```
 
-Graph of title_basics
-```{r}
-summary(title_basics)
-title_basics %>%
-  filter(!is.na(runtimeMinutes)) %>%
-  ggplot(aes(x = titleType, y = runtimeMinutes, fill = factor(isAdult))) +
-  geom_boxplot() +
-  coord_flip() +
-  labs(title = "Runtime Distribution by Title Type and Adult Content", x = "Title Type", y = "Runtime (minutes)", fill = "Is Adult")
-```
+
 
 Graph of title_principles
 ```{r}
@@ -96,12 +86,13 @@ alt_titles <- title_basics %>%
 num_alt_titles <- nrow(alt_titles)
 cat("Number of titles known by a different name than original:", num_alt_titles)
 
-# Conditional distributions of release year
+#Release year conditional distribution
 ggplot(alt_titles, aes(x = startYear, fill = titleType)) +
   geom_density(alpha = 0.5) +
   labs(title = "Release Year Distributions of Titles Known by Different Names", x = "Release Year", fill = "Title Type")
 ```
-6,458 titles in your dataset have a primaryTitle that is not the same as the originalTitle.
+
+7244 titles in your dataset have a primaryTitle that is not the same as the originalTitle.
 
 #part2-4
 ```{r}
