--- a/part-4.Rmd
+++ b/part-4.Rmd
@@ -41,31 +41,59 @@ genre_summary %>% slice(n()) # lowest
 ```
 The highest genre is history, lowest genre is horror.
 
-
+  * Using stacked bar charts, investigate the proportions of different genres over time. Are any incresing or decreasing? Use factor functions to help make the plots easier to read.
 ```{r}
 #Genre Proportions Over Time
-library(scales)
-top5_genres <- genre_ratings %>% count(genres, sort=TRUE) %>% slice_head(n=5) %>% pull(genres)
-
-genre_prop_df <- genre_ratings %>%
-  mutate(
-    genre_lump = fct_lump(genres, prop=0.01, other_level="Other")
+# Calculate genre proportions by year with cleaned data
+genre_proportions <- title_genres %>%
+  filter(
+    !is.na(genres), 
+    genres != "",
+    !is.na(startYear),
+    between(as.numeric(startYear), 1900, 2025)  # Filter valid years
   ) %>%
-  filter(genre_lump %in% c(top5_genres, "Other")) %>%
-  mutate(genre_lump = fct_relevel(genre_lump, top5_genres, "Other")) %>%
-  count(startYear, genre_lump) %>%
+  mutate(startYear = as.numeric(startYear)) %>%
+  count(startYear, genres) %>%
   group_by(startYear) %>%
-  mutate(prop = n/sum(n), .groups="drop")
+  mutate(prop = n/sum(n)) %>%
+  ungroup()
 
-ggplot(genre_prop_df, aes(x=startYear, y=prop, fill=genre_lump)) +
-  geom_col() +
-  scale_y_continuous(labels=percent_format()) +
+# Aggregate rare genres and maintain temporal trends
+genre_trends <- genre_proportions %>%
+  mutate(
+    genre_group = fct_lump_n(genres, n = 8, w = prop, other_level = "Other"),
+    genre_group = fct_reorder(genre_group, -prop, sum)
+  ) %>%
+  group_by(startYear, genre_group) %>%
+  summarise(prop = sum(prop), .groups = "drop")
+
+# Create annotated stacked bar chart
+ggplot(genre_trends, aes(x = startYear, y = prop, fill = genre_group)) +
+  geom_area(position = "fill", color = "white", linewidth = 0.1) +
+  scale_y_continuous(labels = percent_format()) +
+  scale_x_continuous(breaks = seq(1920, 2020, 20)) +
+  scale_fill_manual(values = c(
+    "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd",
+    "#8c564b", "#e377c2", "#7f7f7f", "#bcbd22", "#17becf"
+  )) +
   labs(
-    title="Genre Share Over Time (Top 5 + Other)",
-    x="Release Year", y="Proportion of Titles", fill="Genre"
+    title = "Genre Popularity Trends (1920-2025)",
+    subtitle = "Proportional representation of top 8 genres over time",
+    x = "Release Year", 
+    y = "Market Share",
+    fill = "Genre"
   ) +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle=45, hjust=1))
+  theme(
+    panel.grid.major.x = element_blank(),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  guides(fill = guide_legend(nrow = 3, title.position = "top")) +
+  annotate("text", x = 2005, y = 0.15, label = "Rise of\nDocumentaries", 
+           size = 3, color = "#2ca02c") +
+  annotate("curve", x = 2000, xend = 2010, y = 0.18, yend = 0.22,
+           curvature = -0.3, arrow = arrow(length = unit(0.2, "cm")))
 
 ```
 
@@ -87,7 +115,10 @@ ggplot(votes_by_year, aes(startYear, avg_votes)) +
 
 cor(votes_by_year$startYear, votes_by_year$avg_votes, use="complete.obs")
 ```
+the proportion of Short films was very high in the early 20th century but declined sharply after 1940. Drama and Comedy have remained consistently popular throughout the decades. Since the 1990s, Documentary has grown steadily, while genres like Animation, Action, and Adventure have gradually increased their market share.
 
+
+* Join the `title_basics` with the ratings table. Have the number of ratings changed over time (based on release year)? Display graphically but also answer with numerical results.
 ```{r}
 #Top 10 Principals by Median Rating
 person_ratings <- title_principals %>%
@@ -109,41 +140,50 @@ top10_principals <- person_ratings %>%
 top10_principals
 
 ```
+* Join the names with the ratings and the principals table. 
+  * Group by individual people, find the top ten people based on the median rating of the titles they appear in.
+  * Find the proportions of genres for the the titles that include the top 10 rated principals.
+  * Graph ratings against years. What trends do you see?
 
 
 ```{r}
-#a) Genre Mix for Top 10
-person_ratings %>%
-  filter(primaryName %in% top10_principals$primaryName) %>%
-  inner_join(title_genres, by="tconst") %>%
-  count(primaryName, genres) %>%
-  group_by(primaryName) %>%
-  mutate(prop = n/sum(n), .groups="drop") %>%
-  ggplot(aes(genres, prop, fill=genres)) +
-    geom_col(show.legend=FALSE) +
-    facet_wrap(~primaryName, scales="free_x") +
-    labs(
-      title="Genre Mix for Top 10 Principals",
-      x="Genre", y="Proportion"
-    ) +
-    theme_minimal() +
-    theme(axis.text.x = element_text(angle=45, hjust=1))
+# Join principals, ratings, and names tables
+person_ratings <- title_principals %>%
+  select(nconst, tconst) %>%
+  inner_join(title_ratings, by="tconst") %>%
+  inner_join(name_basics %>% select(nconst, primaryName), by="nconst") %>%
+  inner_join(title_basics %>% select(tconst, startYear), by="tconst")
 
+# Calculate top 10 principals by median rating
+top10_principals <- person_ratings %>%
+  group_by(primaryName) %>%
+  summarise(
+    median_rating = median(averageRating, na.rm=TRUE),
+    n_titles      = n(),
+    .groups       = "drop"
+  ) %>%
+  arrange(desc(median_rating)) %>%
+  slice_head(n=10)
 ```
 
 ```{r}
-#b) Rating Trend vs. Year
+# Find genre proportions for top 10 principals
 person_ratings %>%
   filter(primaryName %in% top10_principals$primaryName) %>%
-  ggplot(aes(startYear, averageRating, color=primaryName)) +
-    geom_point(alpha=0.6) +
-    geom_smooth(method="loess", se=FALSE) +
+  inner_join(title_genres, by = "tconst") %>%
+  count(primaryName, genres) %>%
+  group_by(primaryName) %>%
+  mutate(prop = n / sum(n), .groups = "drop") %>%
+  ggplot(aes(x = genres, y = prop, fill = genres)) +
+    geom_col(show.legend = FALSE) +
+    facet_wrap(~ primaryName, scales = "free_x") +
     labs(
-      title="Rating vs. Year for Top 10 Principals",
-      x="Release Year", y="Rating"
+      title = "Genre Proportions for Top 10 Rated Principals",
+      x = "Genre", 
+      y = "Proportion"
     ) +
-    theme_minimal()
-
+    theme_minimal() +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 
